Creado mediante Colaboratory

--- a/Sesion-04/Reto-03/dataframes.ipynb
+++ b/Sesion-04/Reto-03/dataframes.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "RgA4gnS-JM8C"
       },
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "iQVnK5JwJM8E"
       },
@@ -73,21 +73,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "B189ZYUvJM8E"
       },
       "outputs": [],
       "source": [
-        "df_productos = pd.DataFrame(datos_productos)"
+        "df_productos = pd.DataFrame(datos_productos, index=indice)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "id": "NJpuqgynJM8E",
-        "outputId": "255261b2-e344-47ab-f883-1161e242232b",
+        "outputId": "b56d4458-f5f8-4da0-d919-1c630373e2e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
@@ -99,27 +99,27 @@
           "data": {
             "text/plain": [
               "                nombre  precio  peso  capacidad de destrucción retinal  \\\n",
-              "0           Pokemaster   10000   1.2                                 3   \n",
-              "1             Cegatron    5500   1.5                                 7   \n",
-              "2         Pikame Mucho    3500   2.3                                 6   \n",
-              "3  Lazarillo de Tormes     750   5.5                                 8   \n",
-              "4        Stevie Wonder   15500   3.4                                 9   \n",
-              "5               Needle   12250   2.4                                 2   \n",
-              "6         El AyMeDuele   23000   8.8                                10   \n",
+              "1           Pokemaster   10000   1.2                                 3   \n",
+              "2             Cegatron    5500   1.5                                 7   \n",
+              "3         Pikame Mucho    3500   2.3                                 6   \n",
+              "4  Lazarillo de Tormes     750   5.5                                 8   \n",
+              "5        Stevie Wonder   15500   3.4                                 9   \n",
+              "6               Needle   12250   2.4                                 2   \n",
+              "7         El AyMeDuele   23000   8.8                                10   \n",
               "\n",
               "   disponible  \n",
-              "0        True  \n",
-              "1       False  \n",
-              "2        True  \n",
+              "1        True  \n",
+              "2       False  \n",
               "3        True  \n",
-              "4       False  \n",
+              "4        True  \n",
               "5       False  \n",
-              "6        True  "
+              "6       False  \n",
+              "7        True  "
             ],
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-9178e65c-6f12-440b-8ea3-d0dd8b1c9ff3\">\n",
+              "  <div id=\"df-6b68c187-3268-4b61-9be8-d0f0fbc68147\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -148,7 +148,7 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
+              "      <th>1</th>\n",
               "      <td>Pokemaster</td>\n",
               "      <td>10000</td>\n",
               "      <td>1.2</td>\n",
@@ -156,7 +156,7 @@
               "      <td>True</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1</th>\n",
+              "      <th>2</th>\n",
               "      <td>Cegatron</td>\n",
               "      <td>5500</td>\n",
               "      <td>1.5</td>\n",
@@ -164,7 +164,7 @@
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
+              "      <th>3</th>\n",
               "      <td>Pikame Mucho</td>\n",
               "      <td>3500</td>\n",
               "      <td>2.3</td>\n",
@@ -172,7 +172,7 @@
               "      <td>True</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
+              "      <th>4</th>\n",
               "      <td>Lazarillo de Tormes</td>\n",
               "      <td>750</td>\n",
               "      <td>5.5</td>\n",
@@ -180,7 +180,7 @@
               "      <td>True</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
+              "      <th>5</th>\n",
               "      <td>Stevie Wonder</td>\n",
               "      <td>15500</td>\n",
               "      <td>3.4</td>\n",
@@ -188,7 +188,7 @@
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5</th>\n",
+              "      <th>6</th>\n",
               "      <td>Needle</td>\n",
               "      <td>12250</td>\n",
               "      <td>2.4</td>\n",
@@ -196,7 +196,7 @@
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>6</th>\n",
+              "      <th>7</th>\n",
               "      <td>El AyMeDuele</td>\n",
               "      <td>23000</td>\n",
               "      <td>8.8</td>\n",
@@ -206,7 +206,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9178e65c-6f12-440b-8ea3-d0dd8b1c9ff3')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6b68c187-3268-4b61-9be8-d0f0fbc68147')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -219,8 +219,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-af429a86-114a-4988-b25f-5de9a12f501b\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-af429a86-114a-4988-b25f-5de9a12f501b')\"\n",
+              "    <div id=\"df-05c32abd-ca26-4edc-be7c-c807d85dc11d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-05c32abd-ca26-4edc-be7c-c807d85dc11d')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -277,7 +277,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-af429a86-114a-4988-b25f-5de9a12f501b button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-05c32abd-ca26-4edc-be7c-c807d85dc11d button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -324,12 +324,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9178e65c-6f12-440b-8ea3-d0dd8b1c9ff3 button.colab-df-convert');\n",
+              "          document.querySelector('#df-6b68c187-3268-4b61-9be8-d0f0fbc68147 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9178e65c-6f12-440b-8ea3-d0dd8b1c9ff3');\n",
+              "          const element = document.querySelector('#df-6b68c187-3268-4b61-9be8-d0f0fbc68147');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -351,7 +351,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ],
       "source": [
@@ -371,10 +371,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 15,
       "metadata": {
         "id": "u42c1q4xJM8F",
-        "outputId": "45ffc3f6-bcbd-41c8-b739-b9b80a00fbde",
+        "outputId": "dbe4ba13-8bd0-46e7-e20f-1f1bf052b4c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
@@ -386,15 +386,15 @@
           "data": {
             "text/plain": [
               "                nombre  precio  disponible\n",
-              "3  Lazarillo de Tormes     750        True\n",
-              "4        Stevie Wonder   15500       False\n",
-              "5               Needle   12250       False\n",
-              "6         El AyMeDuele   23000        True"
+              "3         Pikame Mucho    3500        True\n",
+              "4  Lazarillo de Tormes     750        True\n",
+              "5        Stevie Wonder   15500       False\n",
+              "6               Needle   12250       False"
             ],
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-f93660fa-40fd-4782-ac0a-d9f69fe651fc\">\n",
+              "  <div id=\"df-2eee3bbd-9fd2-4f5c-8b98-15a281033918\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -422,32 +422,32 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
+              "      <td>Pikame Mucho</td>\n",
+              "      <td>3500</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
               "      <td>Lazarillo de Tormes</td>\n",
               "      <td>750</td>\n",
               "      <td>True</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
+              "      <th>5</th>\n",
               "      <td>Stevie Wonder</td>\n",
               "      <td>15500</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>5</th>\n",
+              "      <th>6</th>\n",
               "      <td>Needle</td>\n",
               "      <td>12250</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>El AyMeDuele</td>\n",
-              "      <td>23000</td>\n",
-              "      <td>True</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f93660fa-40fd-4782-ac0a-d9f69fe651fc')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2eee3bbd-9fd2-4f5c-8b98-15a281033918')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -460,8 +460,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-dfc37800-7a0c-40e3-85da-a98617316cba\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dfc37800-7a0c-40e3-85da-a98617316cba')\"\n",
+              "    <div id=\"df-33efaf0a-26d8-428e-920f-3dbce1d86acf\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-33efaf0a-26d8-428e-920f-3dbce1d86acf')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -518,7 +518,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-dfc37800-7a0c-40e3-85da-a98617316cba button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-33efaf0a-26d8-428e-920f-3dbce1d86acf button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -565,12 +565,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f93660fa-40fd-4782-ac0a-d9f69fe651fc button.colab-df-convert');\n",
+              "          document.querySelector('#df-2eee3bbd-9fd2-4f5c-8b98-15a281033918 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f93660fa-40fd-4782-ac0a-d9f69fe651fc');\n",
+              "          const element = document.querySelector('#df-2eee3bbd-9fd2-4f5c-8b98-15a281033918');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -592,19 +592,19 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 15
         }
       ],
       "source": [
         "# Quiero un DataFrame que contenga los productos \"Pikame Mucho\" y \"Stevie Wonder\"\n",
-        "pm_sw = df_productos.loc[[2,5]]\n",
+        "pm_sw = df_productos.loc[[3,5]]\n",
         "pm_sw\n",
         "# Quiero un DataFrame que contenga desde el producto #4 hasta el último\n",
         "p4_final = df_productos.loc[4:]\n",
         "p4_final\n",
         "\n",
         "# Quiero un DataFrame que contenga los productos \"El AyMeDuele\", \"Lazarillo de Tormes\" y \"Needle\"\n",
-        "amd_lt_n = df_productos.loc[[6,3,5]]\n",
+        "amd_lt_n = df_productos.loc[[7,4,6]]\n",
         "amd_lt_n\n",
         "\n",
         "# Quiero un DataFrame que contenga desde el primer producto hasta el producto #5\n",
@@ -612,7 +612,7 @@
         "primer_p5\n",
         "\n",
         "# Quiero un DataFrame que contenga los productos \"Pikame Mucho\" y \"Lazarillo de Tormes\", pero sólo con las columnas \"nombre\", \"precio\" y \"peso\"\n",
-        "pm_lt_pp = df_productos.loc[[2,3], ['nombre', 'precio', 'peso']]\n",
+        "pm_lt_pp = df_productos.loc[[3,4], ['nombre', 'precio', 'peso']]\n",
         "pm_lt_pp\n",
         "\n",
         "# Quiero un DataFrame que contenga todos los productos pero con sólo las columnas 'nombre', 'precio' y 'capacidad de destrucción retinal'\n",
@@ -635,10 +635,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 16,
       "metadata": {
         "id": "ckzF990sJM8G",
-        "outputId": "7830135a-07af-4fa0-a272-0dfe3237d3c9",
+        "outputId": "78e7a5f9-10a3-4ce3-ccbc-38a96dd9701d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -648,7 +648,29 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "df_productos ha sido creado incorrectamente ... Favor de revisar\n"
+            "== Verificación de Indexaciones ==\n",
+            "\n",
+            "\n",
+            "- Descripción de pedido: DataFrame que contenga los productos \"Pikame Mucho\" y \"Stevie Wonder\"\n",
+            "El pedido es Correcto ... Muchas gracias!\n",
+            "\n",
+            "- Descripción de pedido: DataFrame que contenga desde el producto #4 hasta el último\n",
+            "El pedido es Correcto ... Muchas gracias!\n",
+            "\n",
+            "- Descripción de pedido: DataFrame que contenga los productos \"El AyMeDuele\", \"Lazarillo de Tormes\" y \"Needle\"\n",
+            "El pedido es Correcto ... Muchas gracias!\n",
+            "\n",
+            "- Descripción de pedido: DataFrame que contenga desde el primer producto hasta el producto #5\n",
+            "El pedido es Correcto ... Muchas gracias!\n",
+            "\n",
+            "- Descripción de pedido: DataFrame que contenga los productos \"Pikame Mucho\" y \"Lazarillo de Tormes\", pero sólo con las columnas \"nombre\", \"precio\" y \"peso\"\n",
+            "El pedido es Correcto ... Muchas gracias!\n",
+            "\n",
+            "- Descripción de pedido: DataFrame que contenga todos los productos pero con sólo las columnas 'nombre', 'precio' y 'capacidad de destrucción retinal'\n",
+            "El pedido es Correcto ... Muchas gracias!\n",
+            "\n",
+            "- Descripción de pedido: DataFrame que contenga desde el producto #3 hasta el #6, pero sólo las columnas 'nombre', 'precio' y 'disponible'\n",
+            "El pedido es Correcto ... Muchas gracias!\n"
           ]
         }
       ],
